--- a/slides.html
+++ b/slides.html
@@ -203,10 +203,10 @@ $(document).ready(function () {
 </div>
 
 
-<p>Here are some INCREDIBLY ROUGH slides that give high-level intro, before live-coding.</p>
+<p>Selected slides I’ve shown before and during live-coding in class.</p>
 <script async class="speakerdeck-embed" data-id="f60c9022c5824c0994cd3ec558820daf" data-ratio="1.33333333333333" src="//speakerdeck.com/assets/embed.js"></script>
 <div style="margin-bottom:5px">
-<strong> <a href="https://speakerdeck.com/jennybc/purrr-tutorial-intro-very-rough-draft" title="purrr tutorial intro VERY ROUGH DRAFT" target="_blank">purrr tutorial intro VERY ROUGH DRAFT</a> </strong> from <strong><a href="https://speakerdeck.com/jennybc" target="_blank">Jennifer Bryan</a></strong>
+<strong> <a href="https://speakerdeck.com/jennybc/purrr-tutorial-intro-very-rough-draft" title="some purrr teaching slides" target="_blank">some purrr teaching slides</a> </strong> from <strong><a href="https://speakerdeck.com/jennybc" target="_blank">Jennifer Bryan</a></strong>
 </div>
 
 <p><a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/"><img alt="Creative Commons License" style="border-width:0" src="by-nc.png" height="400" width="65"/></a></p>
