--- a/slides.html
+++ b/slides.html
@@ -203,6 +203,7 @@ $(document).ready(function () {
 </div>
 
 
+<p><em>These are not slides from a talk!</em></p>
 <p>Selected slides I’ve shown before and during live-coding in class.</p>
 <script async class="speakerdeck-embed" data-id="f60c9022c5824c0994cd3ec558820daf" data-ratio="1.33333333333333" src="//speakerdeck.com/assets/embed.js"></script>
 <div style="margin-bottom:5px">
