link to repurrrsive

--- a/more-resources.html
+++ b/more-resources.html
@@ -213,6 +213,10 @@ $(document).ready(function () {
 <li><a href="http://r4ds.had.co.nz/hierarchy.html">Handling hierarchy</a></li>
 <li><a href="http://r4ds.had.co.nz/many-models.html">Many models</a></li>
 </ul></li>
+<li>Example lists are in the repurrrsive package:
+<ul>
+<li><a href="https://github.com/jennybc/repurrrsive#readme">https://github.com/jennybc/repurrrsive</a></li>
+</ul></li>
 </ul>
 
 <p><a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/"><img alt="Creative Commons License" style="border-width:0" src="by-nc.png" height="400" width="65"/></a></p>
